Wed Aug  1 19:20:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/belkin-hid.c, drivers/usbhid-ups.c: workaround for
   incorrect report over the interrupt pipeline that caused spurious
   low battery warnings

Tue Jul 31 19:41:24 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/apcsmart.[ch]: add support for old APC SmartUPS 1250 (the
   changes are small, so I don't see a reason why not to include it)

http://lists.alioth.debian.org/pipermail/nut-upsdev/2007-July/002345.html

Tue Jul 31 18:46:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/mge-hid.c: reformatted 'mge_hid2nut[]' table to always break
   at the same place (which is easier on my eyes)

Tue Jul 31 18:21:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/mge-hid.c:
   - fixed broken 'output.voltage.nominal' which was actually indicating the
     nominal 'battery.voltage.nominal' (at least on the Evolution 650 and
     Pulsar M 2200 and most likely others too)
   - the above parameter is broken on the Evolution 650 (shows twice the
     nominal value, firmware bug?)
   - add several parameters which were previously not supported
   - appended HU_FLAG_STATIC where appropriate

Sat Jul 28 19:58:11 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
 - drivers/megatec.c: battery values for 72V UPS.

Sat Jul 28 16:38:43 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/driver.list, drivers/belkin-hid.c, scripts/hotplug/libhid.usermap,
   scripts/udev/nut-usbups.rules.in: Add Belkin F6C1200-UNV (older model)
   to supported devices.

Thu Jul 26 19:45:12 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsmon.c: only change the polling frequency if the OL/OB state
   changes (code cleanup, not a functional change)

Sun Jul 22 19:18:08 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: likewise we probably shouldn't check for FD_ISSET
   either if we already know the client was disconnected.
